--- a/ParrotWingsReactBack/ClientApp/package.json
+++ b/ParrotWingsReactBack/ClientApp/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@microsoft/signalr": "^3.1.0",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.3",
-    "axios": "^0.19.0",
+    "apollo-boost": "^0.4.7",    
+    "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
